--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "bcrypt": "^5.1.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "form-data": "^4.0.0",
     "multer": "^2.0.2",
-    "sqlite3": "^5.1.7"
+    "mysql2": "^3.15.2"
   }
 }
