--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,12 @@
-# PostgreSQL Database Configuration
+# MySQL Database Configuration
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=3306
 DB_NAME=expense_tracker
-DB_USER=postgres
-DB_PASSWORD=your_postgres_password_from_installation
+DB_USER=root
+DB_PASSWORD=mypassword
 
 # Session Configuration
 SESSION_SECRET=your-very-secure-session-secret-key-here
-
-# Server Configuration
-PORT=3000
 
 # n8n OCR Webhook URL
 N8N_WEBHOOK_URL=http://localhost:5678/webhook/upload-webhook
