--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "form-data": "^4.0.0",
